Updated for release 7.4.0